instructions/src/instructions/snapshots/osrm_extensions_instructions__instructions__voice_announcements__tests__and_then_step.snap
---
source: instructions/src/instructions/voice_announcements.rs
expression: announcements
---
[
    Continue(
        Distance {
            value: 1515.08,
            unit: Meters,
        },
    ),
    Approach(
        Distance {
            value: 0.5,
            unit: Kilometers,
        },
    ),
    ManeuverAndThen(
        Distance {
            value: 70.0,
            unit: Meters,
        },
    ),
]
